# rezorpay

./: Makefile  pyproject.toml
core/: db.sqlite3
core/app/: admin.py  models.py  serializers.py  urls.py  views.py
core/app/migrations/: 0001_initial.py  0002_tikit_created_tikit_modified.py  0003_tikit_deleted.py
core/backend/: urls.py
core/backend/settings/: __init__.py
core/backend/settings/components/: common.py
core/config/: .env
core/payment/: models.py  razorpay.py  serializers.py  urls.py  views.py
core/payment/migrations/: 0001_initial.py  0002_payment_tikits.py  0003_cardinformation_created_cardinformation_modified_and_more.py  0004_cardinformation_deleted_order_deleted_and_more.py
